--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,7 +91,7 @@
             app:layout_constraintTop_toBottomOf="@id/btn_sign_github" />
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textfield_email"
+            android:id="@+id/text_input_layout_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
@@ -102,6 +102,7 @@
             app:layout_constraintTop_toBottomOf="@id/tv3">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textfield_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress" />
@@ -109,7 +110,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/textfield_password"
+            android:id="@+id/text_input_layout_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Password"
@@ -117,9 +118,10 @@
             android:layout_marginTop="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/textfield_email">
+            app:layout_constraintTop_toBottomOf="@id/text_input_layout_email">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/textfield_password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
@@ -141,7 +143,7 @@
             app:cornerRadius="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textfield_password"
+            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
             app:strokeColor="#000000"
             app:strokeWidth="1dp" />
 
