--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,6 +4,7 @@
         <item>@font/aboreto</item>
         <item>@font/be_vietnam_bold</item>
         <item>@font/noto_sans</item>
+        <item>@font/noto_sans_bold</item>
         <item>@font/noto_sans_light</item>
     </array>
 </resources>
