--- a/app/src/main/res/layout/dialog_add_table.xml
+++ b/app/src/main/res/layout/dialog_add_table.xml
@@ -6,18 +6,27 @@
     android:layout_height="match_parent"
     >
 
+    <ImageView
+        android:id="@+id/ic_close"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:src="@drawable/ic_close"
+        android:layout_marginEnd="5dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/tv_add_table"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
         android:fontFamily="@font/noto_sans_bold"
         android:gravity="center"
         android:text="Add Table"
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/ic_close" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
