--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -24,4 +24,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_add_floors" />
+
+    <Button
+        android:id="@+id/btn_add_category"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Add category"
+        app:layout_constraintEnd_toEndOf="@+id/btn_all_floor"
+        app:layout_constraintStart_toStartOf="@+id/btn_all_floor"
+        app:layout_constraintTop_toBottomOf="@+id/btn_all_floor" />
 </androidx.constraintlayout.widget.ConstraintLayout>
