--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -129,6 +129,28 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
+        <LinearLayout
+            android:id="@+id/linear_layout_remember_me"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_password"
+            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password">
+
+            <RadioButton
+                android:id="@+id/check_box_remember_me"
+                android:layout_width="32dp"
+                android:layout_height="32dp" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/noto_sans"
+                android:text="Remember me" />
+        </LinearLayout>
+
+
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_login"
             style="@style/Widget.Material3.Button.ElevatedButton"
@@ -143,7 +165,7 @@
             app:cornerRadius="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password"
+            app:layout_constraintTop_toBottomOf="@+id/linear_layout_remember_me"
             app:strokeColor="#000000"
             app:strokeWidth="1dp" />
 
