fix create order

--- a/app/src/main/res/layout/activity_menu_item.xml
+++ b/app/src/main/res/layout/activity_menu_item.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.CreateOderActivity">
+    tools:context=".ui.MenuItemActivity">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar"
-        app:title="Create Order"
+        app:title="Menu Item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorSurface"
