update add reservation

--- a/app/src/main/res/layout/activity_add_table.xml
+++ b/app/src/main/res/layout/activity_add_table.xml
@@ -53,7 +53,7 @@
                 android:id="@+id/ed_add_table_capacity"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="text" />
+                android:inputType="number" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
