fix ui order details

--- a/app/src/main/res/layout/order_menu_item.xml
+++ b/app/src/main/res/layout/order_menu_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,14 +7,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
-    android:clickable="true"
-    android:focusable="true"
-    android:foreground="?attr/selectableItemBackground"
+    android:background="@drawable/background_order_menu"
     >
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -22,13 +16,6 @@
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:id="@+id/order_menu_item"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_order_board"
-                />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/order_menu_item_name"
@@ -38,8 +25,12 @@
                 android:fontFamily="@font/noto_sans_bold"
                 android:gravity="center"
                 android:layout_gravity="center"
-                android:text="Huy" />
-
+                android:text="Traf sua vi dua tay " />
+            <View
+                android:layout_width="1dp"
+                android:layout_height="16dp"
+                android:background="@color/black"
+                />
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/order_menu_item_quantity"
                 android:layout_width="match_parent"
@@ -50,7 +41,6 @@
                 android:layout_gravity="center"
                 />
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</com.google.android.material.card.MaterialCardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
 
