--- a/app/src/main/res/drawable/status_table.xml
+++ b/app/src/main/res/drawable/status_table.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle"
+    android:shape="oval"
     >
     <solid android:color="#FFFFFF"
         />
-    <stroke android:color="@color/divider_color"
+    <stroke android:color="#3E3D3D"
         android:width="1dp"
         />
 </shape>
