--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="gray_dark">#D0DDD0</color>
     <color name="blue">#006BFF</color>
     <color name="divider_color">#DDDDDD</color>
+    <color name="red">#ff0000</color>
 </resources>
