--- a/app/src/main/res/layout/activity_order_payment.xml
+++ b/app/src/main/res/layout/activity_order_payment.xml
@@ -63,6 +63,7 @@
                     android:textSize="18sp" />
 
                 <TextView
+                    android:id="@+id/tv_table_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
@@ -261,7 +262,6 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                  >
-
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rec_order_menu_item"
                         android:layout_width="match_parent"
