--- a/app/src/main/res/layout/activity_order_payment.xml
+++ b/app/src/main/res/layout/activity_order_payment.xml
@@ -43,6 +43,16 @@
             android:layout_height="wrap_content"
             android:paddingBottom="32dp">
 
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:visibility="gone"
+                />
             <LinearLayout
                 android:id="@+id/linear_layout_payment"
                 android:layout_width="match_parent"
