--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -208,6 +208,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/linear_layout_admin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
